--- a/Day_3/src/main/resources/application.properties
+++ b/Day_3/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/day3
 spring.datasource.username=root
-spring.datasource.password=Fazurunisha@1708
+spring.datasource.password=amd@2004
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.format_sql=true
